--- a/css/styles.css
+++ b/css/styles.css
@@ -35,17 +35,19 @@ img{
 #about{
     /* background-image: url(https://images.pexels.com/photos/235994/pexels-photo-235994.jpeg?auto=compress&cs=tinysrgb&h=350); */
     color:black;
-    height: 600px;
+    height: auto;
     font-family: 'Montserrat';
     padding-top: 150px;
     /* padding: 0; */
     margin: 0;
+    width: 100%;
     font-size: 20px;
 }
 p{
     display: inline-block;
 }
 #div-inline{
+    
     display: inline-flex;
     padding: 20px;
     text-align: center;
@@ -54,7 +56,7 @@ p{
 ul{
     
     list-style-type: none;
-    text-align: center;
+     text-align: center; 
 }
 
 a{
@@ -99,7 +101,7 @@ h2{
     font-family: 'Montserrat';
 }
 #interests{
-    height: 600px; 
+    height: auto; 
     padding-top: 150px;
     /* background-image: url(https://images.pexels.com/photos/1092364/pexels-photo-1092364.jpeg?auto=compress&cs=tinysrgb&h=350); */
     font-family: 'Montserrat';
@@ -118,14 +120,14 @@ p{
     font-family: 'Montserrat';
     font-size: 20px;
     padding-left: 30px;
-    height: 800px;
+    height: auto;
     padding-top: 40px;
     /* background-image: url(https://images.pexels.com/photos/1020320/pexels-photo-1020320.jpeg?auto=compress&cs=tinysrgb&h=350); */
 }
 #contact{
     padding-top: 50px;
     font-family: 'Montserrat';
-    height: 600px;
+    height: auto;
 }
 /* #contactIcon{
     border-radius: 50%;
@@ -137,7 +139,7 @@ p{
 
 }
 #skills{
-    height: 700px;
+    height: auto;
     width: 100%;
     padding-top: 150px;
     /* background-image: url(https://www.pexels.com/photo/black-and-white-blank-challenge-connect-262488/); */
@@ -162,6 +164,8 @@ p{
 }
 #inportfolio{
     display: inline-flex;
+    
+    
 
 }
 #portpic{
@@ -170,11 +174,19 @@ p{
 }
 #portfolio{
     padding-top: 60px;
-    height: 600px;
+    height: auto;
+    width: 100%;
 }
 #inportfolio div{
     padding: 15px;
 }
 span{
     font-weight: bold;
+}
+li img{
+    float: left;
+   
+}
+p div{
+    position: relative;
 }
